# gbemu

./: .gitignore  CMakeLists.txt  README.md  main.c
CMakeModules/: FindCheck.cmake
include/: cpu.h  memory.h  registers.h
libgbemu/: CMakeLists.txt  main.c
libgbemu/include/: cpu.h  memory.h  timers.h
libgbemu/src/: cpu.c  memory.c  timers.c
src/: cpu.c  memory.c
tests/: CMakeLists.txt  tests.c
